[project]
name = "draw_apriltags"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aaron Marburg", email = "amarburg@uw.edu"},
]
dependencies = ["pillow>=11.2.1", "fpdf2>=2.8.3"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
make-apriltag-sheet = "draw_apriltags.make_apriltag_sheet:entrypoint"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
